# nocturne

./: .gitignore  CMakeLists.txt  README.md
includes/: app.h  audio.h  config.h  dynamic_array.h  track.h  ui.h
src/: app.c  audio.c  config.c  dynamic_array.c  main.c  miniaudio.c  ui.c
